Save headers on connect

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -49,6 +49,7 @@
 
     ws.onmessage = function(event) {
       console.log(event.data);
+      ws.send('Data received');
     };
   </script>
 </body>
